--- a/src/scss/set.scss
+++ b/src/scss/set.scss
@@ -25,7 +25,7 @@ body {
     height: 100%;
     font-size: 1.8rem;
     color: $fontColor; // цвет по умолчанию текста по сайту
-    background-color: $bgColor;
+    background-color: $white;
 }
 
 input,
