--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,15 +7,13 @@
 // colors
 $white: #ffffff;
 $black: #000000;
-$fontColor: #1D1D1B;
-$bgColor: #FFFFFF;
-$blue: #6981d7;
-$lightBlue: #63b3df;
-$red: #E29AA8;
-$gray: #dee2e7;
-$textGray: #898485;
-$lightGray: #e9ecf5;
-$green: #559479;
+$black-secondary: #1d1d1b;
+$fontColor: #1d1d1b;
+$green: #2b5644;
+$light-green: #559479;
+$pink: #e29aa8;
+$light-pink: #eec2cb;
+$grey-text: #898485;
 $bgFon: rgb(244, 244, 244);
 
 // ---------------------------------- fonts ---------------------------------
