--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -1,19 +1,27 @@
 @mixin pseudo() {
-  content: '';
-  position: absolute;
-  @content;
+    content: '';
+    position: absolute;
+    @content;
 }
 
 @mixin small-tablet {
-  @media (max-width: 48em) {
-    @content;
-  }
+    @media (max-width: 48em) {
+        @content;
+    }
 }
 
 @mixin sizes($width, $height) {
-  max-width: $width;
-  width: 100%;
-  height: $height;
+    max-width: $width;
+    width: 100%;
+    height: $height;
 
-  @content;
+    @content;
+}
+
+@mixin hover() {
+    @media (any-hover: hover) {
+        &:hover {
+            @content;
+        }
+    }
 }
