--- a/src/ui/styles/_input.scss
+++ b/src/ui/styles/_input.scss
@@ -2,88 +2,220 @@ input[type='text'],
 input[type='email'],
 input[type='tel'],
 textarea {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 textarea:focus,
 input:focus {
-  outline: none;
-  color: $fontColor;
+    outline: none;
+    color: $fontColor;
 }
 
 .input {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  border-radius: 3rem;
-  background-color: $white;
-  font-size: 1.6rem;
-  color: $textGray;
-  @media (max-width: 48em) {
-    row-gap: 1.6rem;
-  }
-
-  // .input__field
-
-  &__field {
-    padding: 1.6rem 2rem;
-    display: block;
-    width: 100%;
-    background-color: $white;
-    line-height: 1;
-    border: 1px solid transparent;
-    border-radius: 3.2rem;
-    transition: color 0.3s ease, border 0.3s ease;
-    &::placeholder {
-      color: $textGray;
-      transition: color 0.3s ease;
-    }
-
-    @media (max-width: 48em) {
-      padding: 2.4rem 3.6rem;
-      border-radius: 3.2rem;
-    }
-  }
-
-  // .input__label
-
-  &__label {
     position: relative;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    column-gap: 3rem;
-    white-space: nowrap;
-    font-size: 1.2rem;
-    font-weight: 400;
-    
-  }
+    flex-direction: column;
+    border-radius: 3rem;
+    background-color: $white;
+    font-size: 1.6rem;
+    color: $grey-text;
+    @media (max-width: 48em) {
+        row-gap: 1.6rem;
+    }
 
-  &._has-focus {
-    .input__field {
-      border: 1.5px solid rgb(226, 154, 168);
-      color: $fontColor;
+    // .input__field
+
+    &__field {
+        padding: 1.6rem 2rem;
+        display: block;
+        width: 100%;
+        background-color: $white;
+        line-height: 1;
+        border: 1px solid transparent;
+        border-radius: 3.2rem;
+        transition:
+            color 0.3s ease,
+            border 0.3s ease;
+        &::placeholder {
+            color: $grey-text;
+            transition: color 0.3s ease;
+        }
+
+        @media (max-width: 48em) {
+            padding: 2.4rem 3.6rem;
+            border-radius: 3.2rem;
+        }
     }
-  }
-  &._has-error {
-    .input__label {
-      color: transparent;
-      &::after {
-        content: attr(data-hint);
-        position: absolute;
-        top: 0;
-        left: 0;
-        color: $red;
+
+    // .input__label
+
+    &__label {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        column-gap: 3rem;
         white-space: nowrap;
-      }
+        font-size: 1.2rem;
+        font-weight: 400;
     }
-    .input__field {
-      border: 1px solid $red;
-      color: $red;
-      &::placeholder {
-        color: $red;
-      }
+
+    &._has-focus {
+        .input__field {
+            border: 1.5px solid rgb(226, 154, 168);
+            color: $fontColor;
+        }
     }
-  }
+    &._has-error {
+        .input__label {
+            color: transparent;
+            &::after {
+                content: attr(data-hint);
+                position: absolute;
+                top: 0;
+                left: 0;
+                color: $pink;
+                white-space: nowrap;
+            }
+        }
+        .input__field {
+            border: 1px solid $pink;
+            color: $pink;
+            &::placeholder {
+                color: $pink;
+            }
+        }
+    }
+}
+
+.checkbox {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+
+    @include small-tablet{
+        gap: 1.6rem;
+    }
+
+    span {
+        font-size: 1.8rem;
+        color: #3c3c3c;
+
+        @include small-tablet{
+            font-size: 3.6rem;
+        }
+    }
+
+    input[type='checkbox'] {
+        -webkit-appearance: none;
+        appearance: none;
+        background-color: transparent;
+        margin: 0;
+        font: inherit;
+        color: currentColor;
+        width: 2.15rem;
+        height: 2.15rem;
+        border: 0.1rem solid $light-green;
+        border-radius: 0.4rem;
+        transition:
+            0.3s border ease,
+            0.3s background-color ease;
+        position: relative;
+
+        @include small-tablet{
+            width: 4.3rem;
+            height: 4.3rem;
+            border-radius: .8rem;
+        }
+
+        &::before {
+            @include pseudo {
+                background: url('./assets/images/icons/markup.svg') no-repeat center;
+                background-size: cover;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                width: 1rem;
+                height: 0.7rem;
+                opacity: 0;
+                transition: 0.3s opacity ease;
+
+                @include small-tablet{
+                    width: 2rem;
+                    height: 1.4rem;
+                }
+            }
+        }
+
+        &:checked {
+            background-color: $light-green;
+
+            &::before {
+                opacity: 1;
+            }
+        }
+    }
+}
+
+.radio {
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 0.8rem;
+
+    @include small-tablet{
+        gap: 1.6rem;
+    }
+
+    span {
+        font-size: 1.8rem;
+        color: #3c3c3c;
+
+        @include small-tablet{
+            font-size: 3.6rem;
+        }
+    }
+
+    input[type='radio'] {
+        -webkit-appearance: none;
+        appearance: none;
+        background-color: transparent;
+        margin: 0;
+        font: inherit;
+        color: currentColor;
+        width: 2.4rem;
+        height: 2.4rem;
+        border: 0.1rem solid $light-green;
+        border-radius: 50%;
+        position: relative;
+
+        @include small-tablet{
+            width: 4.8rem;
+            height: 4.8rem;
+        }
+
+        &::before {
+            @include pseudo {
+                inset: 0;
+                background-color: $light-green;
+                border: 0.4rem solid $white;
+                border-radius: 50%;
+                transform: scale(0);
+                transition: 0.3s transform ease;
+
+                @include small-tablet{
+                    border-width: .8rem;
+                }
+            }
+        }
+
+        &:checked {
+            &::before {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+    }
 }
