feat: banner section; variants section

--- a/src/components/_banner.html
+++ b/src/components/_banner.html
@@ -2,19 +2,21 @@
     <div class="container">
         <div class="banner__content">
             <div class="banner__info">
-                <h2 class="banner__title">У нас самые низкие цены для вас!</h2>
+                <div class="banner__info-text">
+                    <h2 class="banner__title h h_h1">У нас самые низкие цены для вас!</h2>
 
-                <p class="banner__description">
-                    Получите индивидуальное предложение по нашему прайсу! Свяжитесь с нами сегодня, чтобы
-                    получить подробную информацию.
-                </p>
+                    <p class="banner__description text__regular-18">
+                        Получите индивидуальное предложение по нашему прайсу! Свяжитесь с нами сегодня, чтобы
+                        получить подробную информацию.
+                    </p>
 
-                <button class="banner__button">Получить предложение</button>
+                    <button class="banner__button btn btn__white">Получить предложение</button>
+                </div>
 
                 <div class="banner__info-offer">
-                    <strong class="banner__info-offer-title"> 100+ </strong>
+                    <strong class="banner__info-offer-title h h_h2"> 100+ </strong>
 
-                    <p class="banner__info-offer-subtitle">товаров в каталоге</p>
+                    <p class="banner__info-offer-subtitle text__regular-16">товаров в каталоге</p>
                 </div>
             </div>
 
