--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -25,3 +25,10 @@
         }
     }
 }
+
+@mixin clamp-text($lines: 1) {
+    display: -webkit-box;
+    -webkit-line-clamp: $lines;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
