--- a/src/components/sale.html
+++ b/src/components/sale.html
@@ -1,7 +1,7 @@
 <section class="sale">
     <div class="container">
         <div class="sale__swiper swiper">
-          <div class="sale__swiper-wrapper sale__swiper-wrapper">
+          <div class="sale__swiper-wrapper swiper-wrapper">
               <div class="sale__slide swiper-slide">
                   <div class="sale__slide-content">
                     <div class="sale__slide-image">
@@ -25,11 +25,85 @@
                     </div>
                     <a href="#" class="sale__slide-btn btn white">Перейти в каталог</a>
                 </div>
-            </div>
+                </div>
+                <div class="sale__slide swiper-slide">
+                    <div class="sale__slide-content">
+                      <div class="sale__slide-image">
+                          <img src="./assets/images/sale/bgsale.png" alt="" class="sale__slide-image-desk">
+                          <img src="" alt="" class="sale__slide-image-mob">
+                      </div>
+                        <div class="sale__slide-title h h_h1">
+                            Скидки до -15% на подарочные пакеты
+                        </div>
+                        <a href="#" class="sale__slide-btn btn white">Перейти в каталог</a>
+                    </div>
+                </div>
+                <div class="sale__slide swiper-slide">
+                    <div class="sale__slide-content">
+                      <div class="sale__slide-image">
+                          <img src="./assets/images/sale/bgsale.png" alt="" class="sale__slide-image-desk">
+                          <img src="" alt="" class="sale__slide-image-mob">
+                      </div>
+                        <div class="sale__slide-title h h_h1">
+                            Скидки до -15% на подарочные пакеты
+                        </div>
+                        <a href="#" class="sale__slide-btn btn white">Перейти в каталог</a>
+                    </div>
+                </div>
           </div>
-          <div class="sale__pagination pagination">
-                <div class="sale__pagination-bullets bullets"></div>
+          <div class="sale__pagination ">
+                <div class="sale__pagination-bullets"></div>
           </div>
+        </div>
+        <div class="sale__wrapper">
+            <a href="#" class="sale-card">
+                <div class="sale-card__inner">
+                    <div class="sale-card__percent">
+                        -8%
+                    </div>
+                    <div class="sale-card__date">
+                        до 13.12.2023
+                    </div>
+                    <div class="sale-card__text">
+                        «Ваза в каждый дом» — скидки 8% на весь ассортименте
+                    </div>
+                </div>
+                <div class="sale-card__image">
+                    <img src="./assets/images/sale/card-1.png" alt="">
+                </div>
+            </a>
+            <a href="#" class="sale-card">
+                <div class="sale-card__inner">
+                    <div class="sale-card__percent">
+                        -15%
+                    </div>
+                    <div class="sale-card__date">
+                        до 13.12.2023
+                    </div>
+                    <div class="sale-card__text">
+                        Подарочные пакеты со скидками до -15%
+                    </div>
+                </div>
+                <div class="sale-card__image">
+                    <img src="./assets/images/sale/card-2.png" alt="">
+                </div>
+            </a>
+            <a href="#" class="sale-card">
+                <div class="sale-card__inner">
+                    <div class="sale-card__percent">
+                        -34%
+                    </div>
+                    <div class="sale-card__date">
+                        до 13.12.2023
+                    </div>
+                    <div class="sale-card__text">
+                        Тотальная распродажа новогодней коллекции 2024
+                    </div>
+                </div>
+                <div class="sale-card__image">
+                    <img src="./assets/images/sale/card-3.png" alt="">
+                </div>
+            </a>
         </div>
     </div>
 </section>
