--- a/src/scss/sections/_sale.scss
+++ b/src/scss/sections/_sale.scss
@@ -1,6 +1,6 @@
 .sale {
-
     &__slide {
+        position: relative;
         &-content {
             width: 100%;
             height: 41rem;
@@ -9,9 +9,9 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
-            align-items:center;
+            align-items: center;
         }
-    
+
         &-image {
             width: 100%;
             height: 100%;
@@ -37,5 +37,59 @@
             margin-bottom: 4.4rem;
         }
     }
-  
+
+    &__swiper {
+        position: relative;
+        margin-bottom: 4rem;
+    }
+
+    &__pagination {
+        position: absolute;
+        z-index: 2;
+        bottom: 2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1;
+        width: 100%;
+        .swiper-pagination-bullets.swiper-pagination-horizontal {
+            width: fit-content;
+        }
+       
+    }
+
+
+    .swiper-slide-active {
+        .sale__slide-content > * {
+          transform: translateY(0px);
+          opacity: 1;
+        }
+      }
+
+    
+
+
+
+    .swiper-pagination-bullet {
+        border-radius: 0;
+        width: 0.8rem;
+        height: 0.8rem;
+        border-radius: 50%;
+        opacity: 1;
+        background: rgb(43, 86, 68);
+        margin-right: 1.2rem;
+        transition: all 0.2s;
+    }
+
+    .swiper-pagination-bullet-active {
+     
+        width: 4.8rem;
+        border-radius: 1rem;
+        margin-right: 2.2rem;
+    }
+
+    &__wrapper {
+        display: flex;
+        justify-content: space-between;
+    }
 }
