--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -38,6 +38,22 @@
     }
 }
 
+
+.link {
+    display: flex;
+    align-items:center;
+    span {
+        display: block;
+        font-size: 1.6rem;
+        font-weight: 400;
+        margin-right: 1.6rem;
+    }
+    svg {
+        width: 2rem;
+        height: 2rem;
+    }
+}
+
 .btn {
     padding: 1.5rem 3.2rem;
     display: inline-flex;
