feat map section

--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -8,18 +8,7 @@
                     </div>
                     <div class="footer__subscribe">
                         <a href="/" class="btn">
-                            <svg
-                                width="32"
-                                height="32"
-                                viewBox="0 0 32 32"
-                                fill="none"
-                                xmlns="http://www.w3.org/2000/svg"
-                            >
-                                <path
-                                    d="M24.9704 5.8975C25.2807 5.7669 25.6203 5.72185 25.9539 5.76706C26.2876 5.81226 26.603 5.94605 26.8673 6.15452C27.1317 6.36298 27.3353 6.63849 27.4571 6.95237C27.5788 7.26626 27.6142 7.60703 27.5596 7.93924L24.7117 25.2136C24.4355 26.8799 22.6072 27.8355 21.079 27.0055C19.8007 26.3111 17.9022 25.2413 16.1944 24.125C15.3406 23.5662 12.725 21.7768 13.0464 20.5036C13.3227 19.4149 17.7176 15.3239 20.2289 12.8916C21.2146 11.9361 20.7651 11.3848 19.6011 12.2638C16.7093 14.4462 12.0695 17.7649 10.5351 18.6992C9.18145 19.5229 8.47576 19.6635 7.63194 19.5229C6.09248 19.2667 4.66477 18.8699 3.4995 18.3865C1.92487 17.7335 2.00147 15.5687 3.49824 14.9384L24.9704 5.8975Z"
-                                    fill="white"
-                                />
-                            </svg>
+                            <img src="../assets/images/telegram.gif" alt="" />
                             <span>Подписаться на новости</span>
                         </a>
                     </div>
