feat: desktop home page

--- a/src/components/_popular.html
+++ b/src/components/_popular.html
@@ -1,6 +1,6 @@
 <section class="popular">
     <div class="container">
-        <div class="popular__title">
+        <div class="popular__title section-heading">
             <h2 class="h h_h1">Популярные категории</h2>
             <a href="#" class="link">
                 <span>Все категории</span>
