--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -4,3 +4,7 @@ figure {
 
 @import '../sections/banner';
 @import '../sections/variants';
+@import '../sections/recommendations';
+@import '../sections/receipts';
+@import '../sections/news';
+@import '../sections/consultation';
