--- a/src/scss/sections/_news.scss
+++ b/src/scss/sections/_news.scss
@@ -1,9 +1,5 @@
-.variants {
-    &__title {
-        margin-bottom: 4.8rem;
-    }
-
-    &__list {
+.news {
+    &__cards {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 4rem;
