--- a/src/scss/sections/_popular.scss
+++ b/src/scss/sections/_popular.scss
@@ -1,7 +1,7 @@
 .popular {
-
     &__title {
         display: flex;
         justify-content: space-between;
+        align-items: center;
     }
 }
