--- a/src/ui/styles/_pagination.scss
+++ b/src/ui/styles/_pagination.scss
@@ -56,7 +56,7 @@
                 line-height: 130%;
             }
 
-            &:hover {
+            @include hover {
                 background-color: #f4f4f4;
             }
         }
