--- a/src/scss/dev/ukik0.scss
+++ b/src/scss/dev/ukik0.scss
@@ -8,3 +8,4 @@ figure {
 @import '../sections/receipts';
 @import '../sections/news';
 @import '../sections/consultation';
+@import '../sections/catalog';
