--- a/src/ui/styles/_breadcrumbs.scss
+++ b/src/ui/styles/_breadcrumbs.scss
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     gap: 3.2rem;
+    margin-bottom: 2.4rem;
 
     @include small-tablet {
         gap: 6.4rem;
