--- a/src/ui/styles/ui.scss
+++ b/src/ui/styles/ui.scss
@@ -80,6 +80,7 @@
     &::after {
         @include pseudo {
             bottom: -0.4rem;
+            left: 0;
             width: 100%;
             border-bottom: 0.1rem solid $green;
             max-width: 0;
